# codebase-intel-system

./: LICENSE  README.md  RECONNAISSANCE.md  main.py  pyproject.toml  requirements.txt
.cartography/: CODEBASE.md  knowledge_graph.json  lineage_graph.json  module_graph.json  onboarding_brief.md  orchestrator_state.json
src/: cli.py  orchestrator.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  git_analyzer.py  sql_lineage.py  tree_sitter_analyzer.py
src/brownfield_cartographer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/graph/: knowledge_graph.py
src/models/: edges.py  graph.py  nodes.py
src/utils/: context_window.py  language_router.py
